--- a/styles/protyle/inline/mark.scss
+++ b/styles/protyle/inline/mark.scss
@@ -1,4 +1,3 @@
-
 @use "../../common" as *;
 
 $search-bg: get($color, "yellow", 2);
@@ -13,11 +12,11 @@ $mark: get($bg, "focus", 2);
 
 .b3-typography,
 .protyle-wysiwyg {
-  mark {
+  span[data-type~="mark"] {
     background-color: transparent;
     background-image: linear-gradient(
       transparent,
-      transparent 50%,
+      transparent 60%,
       $mark 70%,
       $mark 100%
     );
