--- a/styles/panel/emojis.scss
+++ b/styles/panel/emojis.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 
 $type-radius: get($radius, "base");
@@ -18,7 +17,7 @@ $type-radius: get($radius, "base");
     }
 
     .block__icon {
-      @include icon-btn("pop", get($component-size, "base"), 12px);
+      @include icon-btn("pop", get($component-size, "base"), 12px, true);
     }
   }
 
