--- a/styles/common/mixins.scss
+++ b/styles/common/mixins.scss
@@ -1,4 +1,3 @@
-
 @use "sass:math";
 @use "var" as *;
 @use "utils" as *;
@@ -67,28 +66,39 @@
   border-radius: get($radius, "small");
 }
 
+@mixin drag-base {
+  background-color: get($bg, "focus", 1);
+  transition: unset !important;
+  border-radius: unset !important;
+}
+
 @mixin drag {
   $drag-width: 2px;
   $drag-color: get($color, "brand", "hover");
 
-  background-color: get($bg, "primary", 1);
+  @include drag-base();
+
   // 当前块的上方
   &__top {
+    @include drag-base();
     box-shadow: 0 0 - $drag-width $drag-color;
   }
 
   // 当前块的下方
   &__bottom {
+    @include drag-base();
     box-shadow: 0 $drag-width $drag-color;
   }
 
   // 当前块的左方
   &__left {
+    @include drag-base();
     box-shadow: -$drag-width 0 $drag-color;
   }
 
   // 当前块的右方
   &__right {
+    @include drag-base();
     box-shadow: $drag-width 0 $drag-color;
   }
 }
