--- a/styles/protyle/util.scss
+++ b/styles/protyle/util.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 @use "../component/menu";
 
@@ -33,7 +32,10 @@ $util-radius: get($radius, "medium");
 
     // 字体效果按钮
     &__style {
-      padding: 0 12px;
+      padding: 4px 12px;
+      border-color: get($border, 3);
+      margin-right: $fn-space;
+      
       &:hover {
         border-color: get($border, 1);
       }
