--- a/styles/dialog/small.scss
+++ b/styles/dialog/small.scss
@@ -8,6 +8,8 @@ $spacing: math.div(16px * 2 + 24px - $w, 2);
 $padding: 24px;
 $meta-w: 80px;
 
+$small-radius: big.$dialog-radius;
+
 @mixin actions {
   $space: 3%;
 
@@ -41,6 +43,10 @@ $meta-w: 80px;
       &__header {
         padding: 16px 12px;
         margin: 0 12px;
+
+        // border: none;
+        // border-radius: $small-radius $small-radius 0 0;
+        // background-color: get($bg, "base", 1);
         // 新建日记弹窗
         &.fn__none {
           display: block !important;
@@ -54,11 +60,10 @@ $meta-w: 80px;
 
       //弹窗关闭按钮
       &__close {
-        @include item("component");
         @include item-close();
         @include component();
         @include svg($w, 8px);
-
+        background-color: get($bg, "page", 2);
         top: $spacing;
         right: $spacing;
       }
@@ -112,6 +117,11 @@ $meta-w: 80px;
       &__action {
         padding: $padding 12px;
         margin: 0 12px;
+
+        // padding: $padding 24px;
+        // border: none;
+        // background-color: get($bg, "base", 1);
+        // border-radius: 0 0 $small-radius $small-radius;
         @include actions();
       }
     }
@@ -121,6 +131,10 @@ $meta-w: 80px;
       margin: 16px $padding;
       .b3-list {
         &-item {
+          &__icon {
+            align-self: flex-start;
+            background-color: transparent;
+          }
           &__showall {
             margin-left: list.$padding;
             line-height: list.$text-h;
