--- a/styles/component/button.scss
+++ b/styles/component/button.scss
@@ -34,6 +34,10 @@
   }
 
   &--outline svg {
+    &[style*="height"] {
+      @include svg(get($icon, "exsmall"));
+      margin-right: $interval;
+    }
     margin-right: $interval;
   }
 
