--- a/styles/dialog/big.scss
+++ b/styles/dialog/big.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 @use "../component/form";
 @use "../component/list";
@@ -62,15 +61,8 @@ $search-h: 50px;
       }
     }
 
-    // 侧边导航栏
-    .b3-tab-bar,
-    // 设置项界面
-    .b3-tab-container {
-      height: min(
-        66.1vh,
-        (list.$text-h + 16px * 2 + $fn-space) * 11 - $fn-space
-      ) !important;
-    }
+    // 设置菜单高度
+    $h: min(66.1vh, (list.$text-h + 16px * 2 + $fn-space) * 11 - $fn-space);
 
     // 侧边导航栏
     .b3-tab-bar {
@@ -78,7 +70,7 @@ $search-h: 50px;
       padding: 0 $fn-space;
       // border-right: $fn-border;
       width: 160px !important;
-
+      height: $h !important;
       // 导航按钮
       .b3-list-item--big {
         padding: 16px 24px;
@@ -94,6 +86,12 @@ $search-h: 50px;
           margin-right: 18px;
         }
       }
+    }
+
+    // 设置项界面
+    .b3-tab-container {
+      overflow: overlay;
+      height: $h !important;
     }
 
     //label
