--- a/styles/common/mixins.scss
+++ b/styles/common/mixins.scss
@@ -60,7 +60,7 @@
 }
 
 @mixin icon-btn($type: "page", $w, $svg-w, $important: false) {
-  @include svg-div($w, $svg-w);
+  @include svg-div($w, $svg-w, $important:$important);
   @include item($type, 1, $important);
 
   border-radius: get($radius, "small");
