fix: :bug: 优化各处编辑区域的左右padding

--- a/styles/panel/block-popover.scss
+++ b/styles/panel/block-popover.scss
@@ -58,9 +58,9 @@ $bread-crumb-height: 32px;
         background-color: $pop-bg;
       }
 
-      &-wysiwyg {
-        padding: 16px 132px !important;
-      }
+      // &-wysiwyg {
+      //   padding: 16px 132px !important;
+      // }
     }
   }
 }
