--- a/themes/tdesign/dark.scss
+++ b/themes/tdesign/dark.scss
@@ -17,6 +17,7 @@
   --text-placeholder: rgba(255, 255, 255, 35%); // 色彩-文字-占位符/说明
   --text-disabled: rgba(255, 255, 255, 22%); // 色彩-文字-禁用
   --text-anti: #000; // 色彩-文字-反色
+  --text-brand: rgb(var(--brand-9)); // 色彩-文字-品牌
   --text-focus: var(--text-anti); // 色彩-文字-品牌
   --text-meta-focus: #00000070; // 色彩-文字-链接
 
