fix: :bug: 修复block-icon样式问题

--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -189,9 +189,7 @@ $map: (
 
     &#closeWindow {
       @include win-control(10px);
-      &:hover {
-        background-color: get($color, "error", "base");
-      }
+      @include item-close();
     }
   }
 
