--- a/styles/panel/backlink.scss
+++ b/styles/panel/backlink.scss
@@ -1,11 +1,18 @@
 @use "../common" as *;
-.sy__backlink {
-//   [data-treetype="backlink"].b3-list-item {
-//     // background-color: get($bg, "page", 2);
-//   }
+@use "../dialog/bazaar";
 
-  [data-node-id] {
-    margin: 4px 0 !important;
-    font-size: 14px !important;
+.sy__backlink {
+  //   [data-treetype="backlink"].b3-list-item {
+  //     // background-color: get($bg, "page", 2);
+  //   }
+  .protyle {
+    // box-shadow: get($shadow, 1);
+    &-wysiwyg {
+      padding-bottom: 5px !important;
+      [data-node-id] {
+        margin: 4px 0 !important;
+        // font-size: 14px !important;
+      }
+    }
   }
 }
